argument handling with main merge

--- a/src/app.conf
+++ b/src/app.conf
@@ -1,7 +1,7 @@
 [database]
 database: fossologyDB 
 username: root 
-password: <password>
+password: jm98741236 
 
 [package]
 path: openssl-1.0.2e/ 
